Funcionalidad atajos con teclado
Se modificó el simbolo de multiplicar por la letra 'x' en el HTML. Se añadio una funcion en el archivo JS que permite hacer operaciones con atajos de teclado así como aplicar el efecto hover al pulsar cada boton igual al efecto que se aplica al situar el mouse en los botones, esto ultimo se logro añadiendo clases para cada boton en el CSS que aplican los efectos hover mencionados para la pulsacion de cada tecla.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="c" class="btn">AC</button>
         <button id="borrar" class="btn">←</button>
         <button id="dividir" class="btn">/</button>
-        <button id="multiplicar" class="btn">*</button>
+        <button id="multiplicar" class="btn">x</button>
         <button class="btn">7</button>
         <button class="btn">8</button>
         <button class="btn">9</button>
